# OptiOignons

./: discrete.py  llama.py  llama_cpu.py  loss.py  loss_net.py  main.py  new.py  optimizer.py  pyproject.toml  routine.py  test.ipynb  utils.py
ppo_lossnet_policy/PPO_1/: events.out.tfevents.1745420824.TuningMachine.18703.0
ppo_lossnet_policy/PPO_10/: events.out.tfevents.1745485358.TuningMachine.31671.0
ppo_lossnet_policy/PPO_11/: events.out.tfevents.1745485565.TuningMachine.33210.0
ppo_lossnet_policy/PPO_12/: events.out.tfevents.1745485612.TuningMachine.33609.0
ppo_lossnet_policy/PPO_13/: events.out.tfevents.1745485674.TuningMachine.34126.0
ppo_lossnet_policy/PPO_14/: events.out.tfevents.1745485871.TuningMachine.35667.0
ppo_lossnet_policy/PPO_15/: events.out.tfevents.1745486186.TuningMachine.38626.0
ppo_lossnet_policy/PPO_16/: events.out.tfevents.1745486216.TuningMachine.38935.0
ppo_lossnet_policy/PPO_17/: events.out.tfevents.1745486248.TuningMachine.39243.0
ppo_lossnet_policy/PPO_18/: events.out.tfevents.1745486892.TuningMachine.44083.0
ppo_lossnet_policy/PPO_19/: events.out.tfevents.1745486932.TuningMachine.44568.0
ppo_lossnet_policy/PPO_2/: events.out.tfevents.1745420942.TuningMachine.18847.0
ppo_lossnet_policy/PPO_20/: events.out.tfevents.1745486956.TuningMachine.44898.0
ppo_lossnet_policy/PPO_21/: events.out.tfevents.1745487454.TuningMachine.49149.0
ppo_lossnet_policy/PPO_22/: events.out.tfevents.1745488088.TuningMachine.54336.0
ppo_lossnet_policy/PPO_3/: events.out.tfevents.1745425031.TuningMachine.19716.0
(+9 files in other folders)
